--- a/.github/workflows/build-and-upload.yml
+++ b/.github/workflows/build-and-upload.yml
@@ -12,12 +12,16 @@ jobs:
         uses: actions/checkout@v2
 
       - name: Setup .NET SDK
-        uses: actions/setup-dotnet@v2
+        uses: actions/setup-dotnet@v4
         with:
           dotnet-version: '4.8.x'
 
-      - name: Build C# project
-        run: dotnet build --configuration Release
+      # dotnet 4.8 isn't available for github actions, so have to do workaround
+      #- name: Build C# project
+       # run: dotnet build --configuration Release
+       
+      - name: Build project
+        run: msbuild Windsong_Lyre.sln /p:Configuration=Release
         
       - name: Create artifacts directory
         run: mkdir -p artifacts
