--- a/.github/workflows/build-and-upload.yml
+++ b/.github/workflows/build-and-upload.yml
@@ -14,7 +14,7 @@ jobs:
       - name: Setup .NET SDK
         uses: actions/setup-dotnet@v4
         with:
-          dotnet-version: '4.8.x'
+          dotnet-version: '4.8.0'
 
       # dotnet 4.8 isn't available for github actions, so have to do workaround
       #- name: Build C# project
