--- a/.github/workflows/build-and-upload.yml
+++ b/.github/workflows/build-and-upload.yml
@@ -6,7 +6,7 @@ on:
 
 jobs:
   build:
-    runs-on: ubuntu-latest
+    runs-on: windows-latest
     steps:
       - name: Checkout code
         uses: actions/checkout@v2
@@ -14,14 +14,14 @@ jobs:
       - name: Setup .NET SDK
         uses: actions/setup-dotnet@v4
         with:
-          dotnet-version: '4.8.0'
+          dotnet-version: '4.8.x'
 
       # dotnet 4.8 isn't available for github actions, so have to do workaround
-      #- name: Build C# project
-       # run: dotnet build --configuration Release
+      - name: Build C# project
+        run: dotnet build --configuration Release
        
-      - name: Build project
-        run: msbuild Windsong_Lyre.sln /p:Configuration=Release
+      #- name: Build project
+        #run: msbuild Windsong_Lyre.sln /p:Configuration=Release
         
       - name: Create artifacts directory
         run: mkdir -p artifacts
