--- a/.github/workflows/upload-and-release.yml
+++ b/.github/workflows/upload-and-release.yml
@@ -38,8 +38,6 @@ jobs:
           name: automated-windsong-lyre
           path: ./downloaded-artifact/
 
-      # Add any other steps you need (e.g., creating a zip file, etc.)
-
       - name: Upload release asset
         uses: actions/upload-release-asset@v1
         with:
@@ -47,3 +45,8 @@ jobs:
           asset_path: ./downloaded-artifact/*
           asset_name: automated-windsong-lyre.zip
           asset_content_type: application/zip
+    permissions:
+          contents: write
+          actions: write
+          attestations: write
+
