--- a/.github/workflows/upload-and-release.yml
+++ b/.github/workflows/upload-and-release.yml
@@ -26,6 +26,10 @@ jobs:
         #run: echo "::set-output name=commit_message::$(git log -1 --pretty=format:'%s%n%n%b')"
         run: echo "commit_message=$(git log -1 --pretty=format:'%s%n%n%b')" >> $GITHUB_ENV
 
+      - name: Set environment token variable
+        run: echo "GITHUB_TOKEN=${{ secrets.GITHUB_TOKEN }}" >> $GITHUB_ENV
+
+
       - name: Create Release
         id: create_release
         uses: actions/create-release@v1
