--- a/.github/workflows/upload-and-release.yml
+++ b/.github/workflows/upload-and-release.yml
@@ -26,6 +26,14 @@ jobs:
         #run: echo "::set-output name=commit_message::$(git log -1 --pretty=format:'%s%n%n%b')"
         run: echo "commit_message=$(git log -1 --pretty=format:'%s%n%n%b')" >> $GITHUB_ENV
 
+      - name: Get latest tag
+        id: get_latest_tag
+        run: echo "::set-output name=tag::$(git describe --abbrev=0 --tags)"
+
+      - name: Increment tag
+        id: increment_tag
+        run: echo "::set-output name=tag::$(python increment_tag.py ${{ steps.get_latest_tag.outputs.tag }})"
+
 
       - name: Create Release
         id: create_release
@@ -33,11 +41,11 @@ jobs:
         with:
           draft: false
           prerelease: false
-          release_name: ${{ github.ref }}
-          tag_name: ${{ github.ref }}
+          release_name: Automated Windsong Lyre Download
+          tag_name: ${{ steps.increment_tag.outputs.tag }}  
+          body: ${{ env.commit_message }}
           #body: ${{ github.event.pull_request.title }}  # Use the pull request title only as the release info
           #body: ${{ steps.get_commit_message.outputs.commit_message }}
-          body: ${{ env.commit_message }}
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 
