--- a/.github/workflows/upload-and-release.yml
+++ b/.github/workflows/upload-and-release.yml
@@ -26,13 +26,13 @@ jobs:
         #run: echo "::set-output name=commit_message::$(git log -1 --pretty=format:'%s%n%n%b')"
         run: echo "commit_message=$(git log -1 --pretty=format:'%s%n%n%b')" >> $GITHUB_ENV
 
-      - name: Get latest tag
-        id: get_latest_tag
-        run: echo "::set-output name=tag::$(git describe --abbrev=0 --tags)"
+      #- name: Get latest tag
+       # id: get_latest_tag
+        #run: echo "::set-output name=tag::$(git describe --abbrev=0 --tags)"
 
-      - name: Increment tag
-        id: increment_tag
-        run: echo "::set-output name=tag::$(python increment_tag.py ${{ steps.get_latest_tag.outputs.tag }})"
+      #- name: Increment tag
+       # id: increment_tag
+        #run: echo "::set-output name=tag::$(python increment_tag.py ${{ steps.get_latest_tag.outputs.tag }})"
 
 
       - name: Create Release
@@ -42,7 +42,7 @@ jobs:
           draft: false
           prerelease: false
           release_name: Automated Windsong Lyre Download
-          tag_name: ${{ steps.increment_tag.outputs.tag }}  
+          tag_name: v1.0.0 #todo: automate this incrementation later on  
           body: ${{ env.commit_message }}
           #body: ${{ github.event.pull_request.title }}  # Use the pull request title only as the release info
           #body: ${{ steps.get_commit_message.outputs.commit_message }}
